renaming the project SAB

--- a/SAB_refatorado/.project
+++ b/SAB_refatorado/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SAB_original</name>
+	<name>SAB_refatorado</name>
 	<comment></comment>
 	<projects>
 	</projects>
